--- a/.github/workflows/integration.yaml
+++ b/.github/workflows/integration.yaml
@@ -12,6 +12,8 @@ jobs:
           echo $GITHUB_REF
           echo $GITHUB_HEAD_REF
           echo $GITHUB_BASE_REF
+          echo $GITHUB_EVENT
+          ECHO $GITHUB_EVENT_PATH
   # build:
   #   name: build_angular
   #   runs-on: ubuntu-18.04
