--- a/.github/workflows/integration.yaml
+++ b/.github/workflows/integration.yaml
@@ -79,6 +79,15 @@ jobs:
       - name: npm_scan
         run: npm run scan
         working-directory: ${{ env.WORKING_DIRECTORY }}
+      - name: codecov_upload
+        uses: codecov/codecov-action@vmaster
+        with:
+          file: ${{ env.WORKING_DIRECTORY }}/test_coverage/lccov.info
+      - name: coveralls_upload
+        uses: coverallsapp/github-action@master
+        with:
+          github-token: ${{ secrets.GITHUB_TOKEN }}
+          path-to-lcov: ${{ env.WORKING_DIRECTORY }}/test_coverage/lccov.info
   pack:
     name: pack_job
     needs: [analyze]
