--- a/.github/workflows/integration.yaml
+++ b/.github/workflows/integration.yaml
@@ -79,10 +79,10 @@ jobs:
       - name: npm_scan
         run: npm run scan
         working-directory: ${{ env.WORKING_DIRECTORY }}
-      - name: codecov_upload
-        uses: codecov/codecov-action@master
-        with:
-          file: ${{ env.WORKING_DIRECTORY }}/test_coverage/lcov.info
+      # - name: codecov_upload
+      #   uses: codecov/codecov-action@master
+      #   with:
+      #     file: ${{ env.WORKING_DIRECTORY }}/test_coverage/lcov.info
       - name: coveralls_upload
         uses: coverallsapp/github-action@master
         with:
