--- a/.github/workflows/build.yaml
+++ b/.github/workflows/build.yaml
@@ -8,6 +8,7 @@ jobs:
       SENTRY_DRY_RUN: true
     name: build_angular
     runs-on: ubuntu-18.04
+    if: '!github.event.repository.fork'
     steps:
       - name: actions_checkout
         uses: actions/checkout@v2.1.0
@@ -36,6 +37,7 @@ jobs:
   test:
     name: test_angular
     runs-on: ubuntu-18.04
+    if: '!github.event.repository.fork'
     steps:
       - name: actions_checkout
         uses: actions/checkout@v2.1.0
@@ -68,6 +70,7 @@ jobs:
     name: analyze_angular
     needs: [build, test]
     runs-on: ubuntu-18.04
+    if: '!github.event.repository.fork'
     steps:
       - name: actions_checkout
         uses: actions/checkout@v2.1.0
