--- a/.github/workflows/release.yaml
+++ b/.github/workflows/release.yaml
@@ -9,6 +9,7 @@ jobs:
       SENTRY_DRY_RUN: false
     name: build_angular
     runs-on: ubuntu-18.04
+    if: '!github.event.repository.fork'
     steps:
       - name: actions_checkout
         uses: actions/checkout@v2.1.0
@@ -40,6 +41,7 @@ jobs:
   test:
     name: test_angular
     runs-on: ubuntu-18.04
+    if: '!github.event.repository.fork'
     steps:
       - name: actions_checkout
         uses: actions/checkout@v2.1.0
@@ -74,6 +76,7 @@ jobs:
     name: analyze_angular
     needs: [build, test]
     runs-on: ubuntu-18.04
+    if: '!github.event.repository.fork'
     steps:
       - name: actions_checkout
         uses: actions/checkout@v2.1.0
@@ -109,6 +112,7 @@ jobs:
     name: deploy_angular
     needs: analyze
     runs-on: ubuntu-18.04
+    if: '!github.event.repository.fork'
     steps:
       - name: actions_checkout
         uses: actions/checkout@v2.1.0
@@ -141,6 +145,7 @@ jobs:
     name: monitor_angular
     needs: deploy
     runs-on: ubuntu-18.04
+    if: '!github.event.repository.fork'
     steps:
       - name: actions_checkout
         uses: actions/checkout@v2.1.0
